--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -3,5 +3,5 @@ html(ng-app="app")
     title AngularRailsDemo
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag  "application"
-  body
+  body(ui-view="")
     = yield
